--- a/inventories/sonet.local/inventory/inventory.yml
+++ b/inventories/sonet.local/inventory/inventory.yml
@@ -9,12 +9,14 @@ all:
       ansible_become_password: "{{ sonet_vbox_become_password }}"
       local_path: "/opt/{{ project }}/docker"
       docker_bind_ip: 192.168.56.2
+      docker_registry_url: registry.sonet.local:5000
     sonet_local:
       ansible_connection: local
       ansible_python_interpreter: python3
       local_path: "{{ local_playbook_path }}/build/sonet_local"
       docker_data_dir: "{{ local_playbook_path }}/build/sonet_local/docker"
       docker_bind_ip: 127.0.0.1
+      docker_registry_url: registry.sonet.local:5000
       include_service:
         - caddy
         - coredns
@@ -31,6 +33,7 @@ all:
       ansible_python_interpreter: python3
       local_path: "{{ local_playbook_path }}/build/sonet_docker_mashine"
       docker_data_dir: "/opt/{{ project }}/docker"
+      docker_registry_url: registry.sonet.local:5000
       include_service:
         - caddy
         - coredns
