Preparing for release

--- a/.env.sample
+++ b/.env.sample
@@ -1,25 +1,35 @@
-# Docker container images prefix
-#PROJECT=
+## Project instance name
+# PROJECT=sonet
 
-# Detach from containers (0 - do not detach)
-DETACH=0
+## Ansible inventory file
+# INVENTORY=inventories/sonet.local/inventory
 
-# Which interface to bind
-DOCKER_BIND_IP=127.0.0.1
+## Ansible playbook
+# PLAYBOOK=inventories/sonet.local/playbook.yml
 
-# Ansible inventory file
-#INVENTORY=inventory
+## Ask become password
+# ANSIBLE_ASK_BECOME_PASS=0
 
-# Python virtual environment dir
-#VENV_DIR=venv
+##
+# LDAP_ADMIN_PASSWORD=admin
 
-# Project deployment root. If not defined, will assign to ./build/$(PROJECT)
-#LOCAL_PATH=/opt
+##
+# LDAP_CONFIG_PASSWORD=config
 
-# Git remote url
-#GIT_URL=
+##
+# LDAP_READONLY_USER_PASSWORD=readonly
 
-# Toggle ansible root privilege escalation
-#ANSIBLE_ROOT_PRIVILAGES=1
+##
+# ANSIBLE_PYTHON_INTERPRETE=python3
 
+##
+# LOCAL_DOCKER_REGISTRY_ADDR=registry.sonet.local
 
+##
+# LOCAL_DOCKER_REGISTRY_PORT=5000
+
+##
+# ANSIBLE_PLAYBOOK=ansible-playbook
+
+##
+# VENV_DIR=venv
