--- a/roles/services/templates/roundcube/image/Dockerfile
+++ b/roles/services/templates/roundcube/image/Dockerfile
@@ -7,3 +7,5 @@ ADD config/10-imap-tls.inc.php /var/roundcube/config/10-imap-tls.inc.php
 
 RUN cp /etc/openssl/certs/ca.crt /usr/local/share/ca-certificates \
     && update-ca-certificates
+
+COPY docker-entrypoint.sh /
