--- a/inventories/sonet.local/inventory/inventory.yml
+++ b/inventories/sonet.local/inventory/inventory.yml
@@ -1,22 +1,12 @@
 ---
 all:
   hosts:
-    sonet_vbox:
-      ansible_connection: ssh
-      ansible_host: 192.168.56.2
-      ansible_become: true
-      ansible_python_interpreter: python3
-      ansible_become_password: "{{ sonet_vbox_become_password }}"
-      local_path: "/opt/{{ project }}/docker"
-      docker_bind_ip: 192.168.56.2
-      docker_registry_url: registry.sonet.local:5000
     sonet_local:
       ansible_connection: local
       ansible_python_interpreter: python3
       local_path: "{{ local_playbook_path }}/build/sonet_local"
       docker_data_dir: "{{ local_playbook_path }}/build/sonet_local/docker"
       docker_bind_ip: 127.0.0.1
-      docker_registry_url: registry.sonet.local:5000
       include_service:
         - caddy
         - coredns
@@ -33,7 +23,7 @@ all:
       ansible_python_interpreter: python3
       local_path: "{{ local_playbook_path }}/build/sonet_docker_mashine"
       docker_data_dir: "/opt/{{ project }}/docker"
-      docker_registry_url: registry.sonet.local:5000
+      docker_registry_url: "{{ local_docker_registry_addr }}:{{ local_docker_registry_port }}"
       include_service:
         - caddy
         - coredns
