--- a/roles/services/templates/caddy/image/Dockerfile
+++ b/roles/services/templates/caddy/image/Dockerfile
@@ -1,4 +1,5 @@
-FROM caddy:2.1.1
+# https://hub.docker.com/_/caddy?tab=tags&page=1&ordering=last_updated
+FROM caddy:{{ conf['docker_tag_caddy']|default("2.3.0") }}
 
 LABEL project="{{ project }}"
 
