--- a/roles/services/templates/excalidraw/image/Dockerfile
+++ b/roles/services/templates/excalidraw/image/Dockerfile
@@ -1,3 +1,4 @@
-FROM excalidraw/excalidraw:sha-1034ec9
+# https://hub.docker.com/r/excalidraw/excalidraw/tags?page=1&ordering=last_updated
+FROM excalidraw/excalidraw:{{ conf['docker_tag_excalidraw']|default("latest") }}
 
 LABEL project="{{ project }}"
