--- a/roles/services/templates/gitlab/image/Dockerfile
+++ b/roles/services/templates/gitlab/image/Dockerfile
@@ -1,4 +1,5 @@
-FROM gitlab/gitlab-ce:13.4.3-ce.0
+# https://hub.docker.com/r/gitlab/gitlab-ce/tags?page=1&ordering=last_updated
+FROM gitlab/gitlab-ce:{{ conf['docker_tag_gitlab']|default("13.11.3-ce.0") }}
 
 LABEL project="{{ project }}"
 
