--- a/roles/services/templates/phpldapadmin/image/Dockerfile
+++ b/roles/services/templates/phpldapadmin/image/Dockerfile
@@ -1,3 +1,4 @@
-FROM osixia/phpldapadmin:0.9.0
+# https://hub.docker.com/r/osixia/phpldapadmin/tags?page=1&ordering=last_updated
+FROM osixia/phpldapadmin:{{ conf['docker_tag_phpldapadmin']|default("stable-amd64") }}
 
 LABEL project="{{ project }}"
