--- a/roles/services/tasks/setup_pki.yml
+++ b/roles/services/tasks/setup_pki.yml
@@ -1,35 +1,35 @@
 ---
 - name: 'pki : setup certs dir'
   stat:
-    path: "{{ playbook_dir }}/pki/certs"
+    path: "{{ local_path }}/pki/certs"
   register: pki_certs_dir
   tags: init
 
 - name: 'pki : setup easy-rsa dir'
   stat:
-    path: "{{ playbook_dir }}/pki/easy-rsa"
+    path: "{{ local_path }}/pki/easy-rsa"
   register: pki_easyrsa_dir
   tags: init
 
 - name: 'pki : checkuot easy-rsa repo'
   git:
     repo: https://github.com/OpenVPN/easy-rsa.git
-    dest: '{{ playbook_dir }}/pki/easy-rsa'
+    dest: '{{ local_path }}/pki/easy-rsa'
     version: v3.0.8
   when: not pki_easyrsa_dir.stat.exists
   tags: init
 
-- name: 'pki : create easy-rsa var file'
+- name: 'pki : create easy-rsa var file {{ local_path }}/pki/easy-rsa/easyrsa3/vars'
   template:
     src: easy-rsa/vars.j2
-    dest: "{{ playbook_dir }}/pki/easy-rsa/easyrsa3/vars"
+    dest: "{{ local_path }}/pki/easy-rsa/easyrsa3/vars"
   when: not pki_easyrsa_dir.stat.exists
   tags: [init, skip_ansible_lint]
 
 - name: 'pki : init and generate ca keys'
   shell: |
-    "{{ playbook_dir }}/pki/easy-rsa/easyrsa3/easyrsa" --batch init-pki nopass
-    "{{ playbook_dir }}/pki/easy-rsa/easyrsa3/easyrsa" --batch "--req-cn=rootca.{{ openldap['ldap_domain'] }}" build-ca nopass
-    "{{ playbook_dir }}/pki/easy-rsa/easyrsa3/easyrsa" --batch gen-dh
+    "{{ local_path }}/pki/easy-rsa/easyrsa3/easyrsa" --batch init-pki nopass
+    "{{ local_path }}/pki/easy-rsa/easyrsa3/easyrsa" --batch "--req-cn=rootca.{{ openldap['ldap_domain'] }}" build-ca nopass
+    "{{ local_path }}/pki/easy-rsa/easyrsa3/easyrsa" --batch gen-dh
   when: not pki_certs_dir.stat.exists
   tags: init
