--- a/roles/services/tasks/storage.yml
+++ b/roles/services/tasks/storage.yml
@@ -2,15 +2,15 @@
 - name: 'storage : service init'
   include_tasks: service_common.yml
   vars:
+    - service_name: storage
     - service_image_dir: '{{ local_path }}/images/storage'
     - service_dirs:
-      - service/proftpd/certs
+        - service/proftpd/certs
     - service_gen_certs:
-      - "storage.{{ openldap['ldap_domain'] }}"
+        - "storage.{{ openldap['ldap_domain'] }}"
     - service_copy_certs:
-      - { src: "ca.crt", dest: "service/proftpd/certs/ca.crt" }
-      - { src: "dh.pem", dest: "service/proftpd/certs/dhparam.pem" }
-      - { src: "issued/storage.{{ openldap['ldap_domain'] }}.crt", dest: "service/proftpd/certs/cert.crt" }
-      - { src: "private/storage.{{ openldap['ldap_domain'] }}.key", dest: "service/proftpd/certs/cert.key" }
+        - { src: "ca.crt", dest: "service/proftpd/certs/ca.crt" }
+        - { src: "dh.pem", dest: "service/proftpd/certs/dhparam.pem" }
+        - { src: "issued/storage.{{ openldap['ldap_domain'] }}.crt", dest: "service/proftpd/certs/cert.crt" }
+        - { src: "private/storage.{{ openldap['ldap_domain'] }}.key", dest: "service/proftpd/certs/cert.key" }
   tags: [init, build, push]
-
