--- a/roles/services/templates/roundcubedb/image/Dockerfile
+++ b/roles/services/templates/roundcubedb/image/Dockerfile
@@ -1,3 +1,4 @@
-FROM postgres:13
+# https://hub.docker.com/_/postgres?tab=tags&page=1&ordering=last_updated
+FROM postgres:{{ conf['docker_tag_roundcube_postgres']|default("13") }}
 
 LABEL project="{{ project }}"
