--- a/roles/services/templates/openldap/image/Dockerfile
+++ b/roles/services/templates/openldap/image/Dockerfile
@@ -1,5 +1,5 @@
 # https://hub.docker.com/r/osixia/openldap/tags?page=1&ordering=last_updated
-FROM osixia/openldap:{{ conf['docker_tag_openldap']|default("stable-amd64") }}
+FROM osixia/openldap:{{ conf['docker_tag_openldap']|default("1.4.0") }}
 
 LABEL project="{{ project }}"
 
