--- a/roles/services/templates/caddy/image/Caddyfile
+++ b/roles/services/templates/caddy/image/Caddyfile
@@ -84,6 +84,54 @@ excalidraw.{{ openldap['ldap_domain'] }}:443 {
     reverse_proxy * excalidraw:80
 }
 
+nextcloud.{{ openldap['ldap_domain'] }}:443 {
+{% if generate_service_certs is defined -%}
+{%- if generate_service_certs is sameas true %}
+    tls /etc/pki/tls/certs/nextcloud.{{ openldap['ldap_domain'] }}.crt /etc/pki/tls/private/nextcloud.{{ openldap['ldap_domain'] }}.key
+{%- endif -%}
+{%- endif %}
+
+{% if (caddy['basic_auth_user'] is defined) and (caddy['basic_auth_pass_hash'] is defined) -%}
+    basicauth {
+        {{ caddy['basic_auth_user'] }} {{ caddy['basic_auth_pass_hash'] }}
+    }
+{%- endif %}
+
+    reverse_proxy * nextcloud:80
+}
+
+onlyoffice.{{ openldap['ldap_domain'] }}:443 {
+{% if generate_service_certs is defined -%}
+{%- if generate_service_certs is sameas true %}
+    tls /etc/pki/tls/certs/onlyoffice.{{ openldap['ldap_domain'] }}.crt /etc/pki/tls/private/onlyoffice.{{ openldap['ldap_domain'] }}.key
+{%- endif -%}
+{%- endif %}
+
+{% if (caddy['basic_auth_user'] is defined) and (caddy['basic_auth_pass_hash'] is defined) -%}
+    basicauth {
+        {{ caddy['basic_auth_user'] }} {{ caddy['basic_auth_pass_hash'] }}
+    }
+{%- endif %}
+
+    reverse_proxy * nextcloud_onlyoffice_ds:80
+}
+
+drawio.{{ openldap['ldap_domain'] }}:443 {
+{% if generate_service_certs is defined -%}
+{%- if generate_service_certs is sameas true %}
+    tls /etc/pki/tls/certs/drawio.{{ openldap['ldap_domain'] }}.crt /etc/pki/tls/private/drawio.{{ openldap['ldap_domain'] }}.key
+{%- endif -%}
+{%- endif %}
+
+{% if (caddy['basic_auth_user'] is defined) and (caddy['basic_auth_pass_hash'] is defined) -%}
+    basicauth {
+        {{ caddy['basic_auth_user'] }} {{ caddy['basic_auth_pass_hash'] }}
+    }
+{%- endif %}
+
+    reverse_proxy * nextcloud_drawio:8080
+}
+
 gitlab.{{ openldap['ldap_domain'] }}:443 {
 {% if generate_service_certs is defined -%}
 {%- if generate_service_certs is sameas true %}
